--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^3.4.2",
     "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -52,4 +53,4 @@
   "devDependencies": {
     "tailwindcss": "^3.4.3"
   }
-} 
+}
